--- a/riskEstimator_/requirements.txt
+++ b/riskEstimator_/requirements.txt
@@ -1,6 +1,8 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-joblib==1.3.2
-pydantic==2.9.0
+fastapi==0.122.0
+uvicorn==0.38.0
+joblib==1.5.2
+pandas==2.3.3
 scikit-learn==1.6.1
-xgboost
+xgboost==3.1.2
+lightgbm==4.6.0
+python-dotenv==1.2.1
